--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .board-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   margin: auto;
   height: 20em;
@@ -41,4 +41,24 @@
 .dice-roll:active {
   border: inset 0.3em #3617fd;
   color: #ebebeb;
+}
+
+.instructions {
+  padding: 0 2em;
+  text-align: center;
+}
+
+.title {
+  color: #2b283a;
+  font-size: 1.8rem;
+  letter-spacing: -0.1rem;
+  margin: 0;
+}
+
+.description {
+  color: #4a4e74;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 0.8rem;
+  margin: 0;
 }
